--- a/main/css/style.css
+++ b/main/css/style.css
@@ -6,10 +6,51 @@ html, body {
     margin: 0;
     padding: 0;         
     width: 100%;        
-    height: 100%;      
-    background: linear-gradient(to right, #a6a6a6, #ffffff);
+    background: linear-gradient(to right, #cfcbcb, #ffffff);
     background-position: right 130px top; 
     background-repeat: no-repeat;
+}
+.carrossel-inativo{
+  display: none;
+}
+#fechar{
+  display: block;
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  cursor: pointer;
+}
+.imagem-ativa{
+  position: fixed;
+  border: black 5px;
+  max-width: 100%;
+  top: 50%; /* Move a imagem para a metade da altura do contêiner */
+  left: 50%; /* Move a imagem para a metade da largura do contêiner */
+  transform: translate(-50%, -50%); /* Move a imagem para cima e para a esquerda */
+}
+.imagem-inativa{
+  display: none;
+}
+.left{
+  position: absolute;
+  bottom: 32px;
+  left: 16px;
+  cursor: pointer;
+}
+.right{
+  position: absolute;
+  bottom: 32px;
+  right: 16px;
+  cursor: pointer;
+}
+.carrossel-ativo{
+  margin: 0;
+  top: 0;
+  background-color: #4a4747;
+  z-index: 1000;
+  position: fixed;
+  height: 100%;
+  width: 100%;
 }
 .cabecalho img{
   display: none;
@@ -18,6 +59,77 @@ html, body {
   display: block;
   border-bottom: solid black 2px;
   width: 100%;
+}
+a{
+  color: #54642f;
+  font-size: 1.5em;
+}
+.subtitulo{
+  font-size: 0.7em;
+  text-align: center;
+  border-bottom: black solid 2px;
+}
+.referencias a{
+  color: black;
+  font-size: 0.8em;
+}
+.menu{
+  position: relative;
+  padding: 1em;
+  display: grid;
+  z-index: 1;
+}
+.menu a{
+  position: relative;
+  z-index: 2;
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #54642f; /* Cor do botão */
+  color: white; /* Cor do texto */
+  text-decoration: none; /* Remove o sublinhado */
+  border: double #ffffff 4px;
+  border-radius: 5px; /* Cantos arredondados */
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  margin: 0.3em;
+}
+.menu a:hover {
+  background-color: #ffffff;
+  color: #54642f;
+}
+.menu a p{
+  position: relative;
+  z-index: 2;
+  text-transform: uppercase;
+}
+.menu button{
+  font-family: "Libre Baskerville", serif;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #54642f; /* Cor do botão */
+  color: white; /* Cor do texto */
+  text-decoration: none; /* Remove o sublinhado */
+  border: double #ffffff 4px;
+  border-radius: 5px; /* Cantos arredondados */
+  font-size: 16px;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  margin: 0.3em;
+  
+}
+.menu button:hover {
+  background-color: #ffffff;
+  color: #54642f;
+}
+.menu button p{
+  position: relative;
+  z-index: 2;
+  text-transform: uppercase;
 }
 
 .titulo{
@@ -49,6 +161,10 @@ html, body {
   color: #54642f;
   padding-left: 1em;
 }
+li strong{
+  color: #54642f;
+}
+
 
 
 @media (min-width: 480px) {
@@ -70,5 +186,13 @@ html, body {
     font-family: "Libre Baskerville", serif;
     font-weight: bold;
     text-align: center;
+  }
+  .imagem-ativa{
+    position: fixed;
+    border: black 5px;
+    max-height: 100%;
+    top: 50%; /* Move a imagem para a metade da altura do contêiner */
+    left: 50%; /* Move a imagem para a metade da largura do contêiner */
+    transform: translate(-50%, -50%); /* Move a imagem para cima e para a esquerda */
   }
 }
